update output